# neural-glider

./: CMakeLists.txt  LICENSE  README.md
include/ann/: Layer.hpp  NeuralNet.hpp  Neuron.hpp
include/negli/: Apple.hpp  AreaPrinter.hpp  ConsolePrint.hpp  Direction.hpp  Glider.hpp  NeuralGliderGame.hpp  Object.hpp  Position.hpp
include/negli/consolePrinter/: ConsolePrinter.hpp
src/: CMakeLists.txt  ConsolePrint.cpp  Direction.cpp  Glider.cpp  Layer.cpp  NeuralGliderGame.cpp  NeuralNet.cpp  Neuron.cpp  main.cpp
src/consolePrinter/: ConsolePrinter.cpp
test/: CMakeLists.txt  Direction.cpp  Glider.cpp  NeuralGliderGame.cpp  Neuron.cpp  Object.cpp  Position.cpp  test_runner.cpp
